# debimate

./: .gitignore  Makefile  README.md  go.mod  ogp.sh
projects/ml/: .gitignore  main.py  pyproject.toml
projects/ml/.github/workflows/: ci.yml
projects/ml/notebooks/: template.ipynb
projects/ml/notebooks/credit-card-fraud/: credit-card-fraud.ipynb
projects/ml/notes/: _index.md
projects/ml/notes/math/bayes-theorem/: index.md
projects/ml/notes/quiz/: index.md
projects/ml/scripts/: download_datasets.py
projects/ml/scripts/datasets/: base.py  kaggle.py  registry.py
projects/ml/scripts/notes/: activation-functions_gen.py  anomaly-detection_gen.py  backpropagation_gen.py  bayes-theorem_gen.py  bias-variance-tradeoff_gen.py  categorical-encoding_gen.py  class-imbalance_gen.py  convex-functions_gen.py  correlation_gen.py  curse-of-dimensionality_gen.py  data-drift_gen.py  data-leakage_gen.py  dbscan_gen.py  decision-tree_gen.py  eigen-decomposition_gen.py  ensemble-learning_gen.py  expectation_gen.py  experiment-tracking_gen.py  feature-importance_gen.py  feature-selection_gen.py  gradient-boosting_gen.py  gradient-descent-sgd_gen.py  hierarchical-clustering_gen.py  hypothesis-test_gen.py  inference-serving_gen.py  information-theory_gen.py  joint-marginal-conditional_gen.py  k-means_gen.py  kde_gen.py  linear-regression_gen.py  lln-clt_gen.py  log-exp-logodds_gen.py  logistic-regression_gen.py  loss-functions_gen.py  mean_gen.py  median_gen.py  missing-values_gen.py  model-performance-monitoring_gen.py  model-registry_gen.py  partial-derivative-gradient_gen.py  (+15 more)
(+549 files in other folders)
